--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-
 <html>
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+<title>Norves Gallery</title>
+<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
+<div id="main">
+<h1>Norves Gallery</h1>
+<hr>
+<p>Welcome to my gallery! Here, you will find information about my OCs, myself, and my friends OCs!</p>
+<p>Here you will find in-debth detail about my OCs and friends OCs! Take your time to look around, there shouldn't be much to look at yet.</p>
+<a href="index.html">Home</a> || <a href="index2.html">OCs</a> || <a href="index3.html">Test</a>
+</div>
 </body>
+
 </html>
